fix: nav bar on ipad and mobile view and image spacing on main logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body{
 
 
 .joinus p small{
-    color: #fafafa;
+    color: #000030;
     font-weight: 600;
 }
 .p-text{
@@ -44,8 +44,10 @@ body{
     
 }
 
-.mark ,mark{
-    background-color: rgb(255, 94, 0);
+.small ,small{
+    
+    font-size: 100%;
+    
 }
 .p-text mark{
     color: #fafafa;
@@ -260,11 +262,24 @@ h2,h3,h4,h5{
 }
 /*-------------------------------------------NavBar */
 
+.img-logo{
+    border: none;
+}
+.navbar .logo-a{
+    
+    height: 4.8rem;
+    width: 8.5rem;
+}
+
+.navbar-nav{
+    margin-left: 50%;
+}
+
 nav a img{
     background-color: rgb(255, 255, 255, 0.7);
     border-radius: 20%;
-    height:20%;
-     width:20%; 
+    height:100%;
+     width:100%; 
 }
 
 .nav-item{
@@ -544,6 +559,7 @@ footer h5{
 
 .signup-container{ /* -- women running tredmill -- */
     height: 100vh;
+    
     background: url(../img/womenrun.jpg) no-repeat bottom right fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -630,7 +646,21 @@ display: none;
 
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1024px){
+    .navbar-nav{
+    margin-left: 30%;
+}
+
+}
+
+
+
+
+@media (max-width: 900px) {
+
+     .navbar-nav{
+    margin-left: 10%;
+}
   .joinus{
      background: rgb(255, 255, 255, .3);
     color: #000;
